[package]
name = "bgpexplorer"
version = "0.3.2"
authors = ["Vladimir Melnikov <wlad.w.m@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wladwm/bgpexplorer"
keywords = ["BGP","monitoring"]
categories = ["network-programming","web-programming"]
description = "This is a BGP route explorer for routing information database with ability to drill-down routes change history"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zettabgp = { version = "0.3.2", features = ["serde"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
websocket-codec = "0.5.2"
futures = "0.3.25"
futures-util = "0.3.25"
chrono = "0.4.23"
ini = { version = "1.3.0"}
async-trait = "0.1.61"
html-escape = "0.2.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
regex = "1.7.1"
url = "2.3.1"
sled = "0.34.7"
dnssector = { version="0.2.12" }
whois-rust =  { version = "1.5.1", features= ["tokio"]  }
ciborium = { version = "0.2.0" }
ciborium-io = "0.2.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"


